浮动工具栏修改

--- a/less/editor.less
+++ b/less/editor.less
@@ -1097,16 +1097,19 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
     text-align: center;
     width: 32px;
     height: 32px;
-    background-color: blueviolet;
+    background-color: #0A06B8;
     cursor: pointer;
     z-index: 1000;
     &:hover {
-      color: blueviolet;
-      background-color: #00FF33;
+      background-color: #0400A9;
+      //box-shadow: 0 0 2px 1px #6408DB;
     }
     & > a {
       font-size: 16px;
       color: #FFF;
+    }
+    .float-option-bar{
+      color: #fff;
     }
   }
 }
