浮动工具栏样式

--- a/less/editor.less
+++ b/less/editor.less
@@ -1101,7 +1101,7 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
     cursor: pointer;
     z-index: 1000;
     &:hover {
-      background-color: #0400A9;
+      background-color: #0600FF;
       //box-shadow: 0 0 2px 1px #6408DB;
     }
     & > a {
