--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -1103,7 +1103,7 @@ a.fm-panel-controlArrowRight > span {
   z-index: 1000;
 }
 .floatMenu > li:hover {
-  background-color: #0400A9;
+  background-color: #0600FF;
 }
 .floatMenu > li > a {
   font-size: 16px;
