--- a/scripts/components/road/tpls/attr_connexity_tpl/addDirectTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/addDirectTpl.html
@@ -1,4 +1,53 @@
-
+<style>
+    .trafficPic{
+        /*float: left;*/
+        transition: all 0.5s;
+        /*border-radius: 50%;*/
+    }
+    .trafficPic > img{
+        text-align: center;
+        cursor: pointer;
+        margin: 5px;
+        transition: all 0.3s;
+        padding: 6px;
+    }
+    .trafficPic > .active{
+        box-shadow: 0px 0px 7px 4px #9d9d9d;
+    }
+    #directOfConnexityDiv {
+        /*background-color: #000;*/
+        opacity: 1;
+        width: 100%;
+    }
+    #directOfConnexityDiv ul {
+        /*background-color: #000;*/
+        list-style: none;
+        /*padding:5px;*/
+        overflow: hidden;
+    }
+    #directOfConnexityDiv ul > li {
+        background-color: transparent;
+    }
+    .detail-info-box {
+        border-radius: 3px;
+        border: 1px solid #fff;
+        float: left;
+        font-size: 12px;
+        padding: 8px;
+        width: 100%;
+        background-color: #555;
+    }
+    .detail-info-title{
+        color: #fff;
+        margin-bottom: 5px;
+    }
+    .split-line{
+        border-top: 1px solid #fff;
+        margin-left: -8px;
+        margin-right: -8px;
+        margin-top: 3px;
+    }
+</style>
 <div ng-controller="addDirectOfConnexityController" id="addDirectOfConnexityDiv">
     <ul class="list-group list-group-lg m-b-none">
         <li class="list-group-item">
@@ -6,18 +55,11 @@
             <div><label class="control-label" style="color: #fff;font-size: 10px">提示：选择图标后在地图上选择退出线</label></div>
         </li>
         <li class="list-group-item">
-            <div  class="trafficPic">
-                <img  ng-repeat="addItem in addRdLancdData"
-                      ng-src="../../../images/road/1301/1301_0_{{addItem.id}}.svg"
-                      ng-click="selectTopo(addItem,$event)">
+            <div class="trafficPic">
+                <img  ng-repeat="item in laneDirectData"
+                ng-src="../../../images/road/1301/1301_0_{{item.flag}}.svg"
+                ng-click="selectLaneDir(item, $event)">
             </div>
         </li>
-
     </ul>
-
-    <div style="padding: 5px 10px;text-align: right">
-        <button type="button" class="btn btn-primary btn-xs" style="width: 60px;text-align: center" ng-click="addLaneConnexity()">
-            增 加
-        </button>
-    </div>
 </div>
