--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -360,7 +360,7 @@
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('value') && dataTipsData.isDrivewayLimit">
                             <label class="col-sm-5 control-label" style="padding: 4px">限&nbsp; 速&nbsp; 值:</label>
                             <div class="col-sm-7 text-ellipsis" style="padding: 4px">
-                                <span class="label " title="{{dataTipsData.limitValue}}>{{dataTipsData.limitValue}} km/h</span>
+                                <span class="label " title="{{dataTipsData.limitValue}}">{{dataTipsData.limitValue}} km/h</span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('se')">
